# realize

./: .gitignore  Cargo.toml  Makefile  README.md  WARP.md  go.mod  go.sum  rustfmt.toml
.config/: nextest.toml
cmd/: realize.go
crate/realize-cmd/: Cargo.toml
crate/realize-cmd/src/: main.rs  progress.rs  push.rs
crate/realize-cmd/tests/: move_files_integration_test.rs  movedirs_integration_test.rs
crate/realize-control/: Cargo.toml
crate/realize-control/src/: churten_cmd.rs  display.rs  main.rs  mark_cmd.rs  output.rs  peer_cmd.rs  progress.rs
crate/realize-control/tests/: control_integration_test.rs
crate/realize-core/: Cargo.toml  build.rs
crate/realize-core/capnp/capnpc/: rust.capnp
crate/realize-core/capnp/rpc/: control.capnp  peer.capnp  result.capnp  store.capnp
crate/realize-core/capnp/storage/: real.capnp
crate/realize-core/src/: config.rs  consensus.rs  fs.rs  lib.rs  logic.rs  model.rs  rpc.rs  setup.rs
crate/realize-core/src/consensus/: churten.rs  download.rs  jobs.rs  movedirs.rs  progress.rs  tracker.rs  types.rs
crate/realize-core/src/fs/: downloader.rs  fuse.rs  nfs.rs
crate/realize-core/src/fs/fuse/: error.rs  format.rs  handles.rs  interface.rs  operations.rs
crate/realize-core/src/logic/: config.rs  consensus.rs  setup.rs
crate/realize-core/src/rpc/: control.rs  household.rs  realstore.rs  testing.rs
crate/realize-core/src/rpc/control/: client.rs  convert.rs  server.rs
crate/realize-core/src/rpc/realstore/: client.rs  metrics.rs  server.rs
crate/realize-core/src/tests/: scenarios.rs
crate/realize-core/src/utils/: async_utils.rs  logging.rs
crate/realize-core/tests/: metrics_test.rs
crate/realize-core/tests/common/: config.rs
crate/realize-daemon/: Cargo.toml
crate/realize-daemon/src/: main.rs
crate/realize-daemon/tests/: daemon_integration_test.rs  integration_test.rs
crate/realize-fs/: Cargo.toml
crate/realize-fs/src/: lib.rs  nfs.rs
crate/realize-fs/tests/: nfs_integration_test.rs
crate/realize-fs/tests/common/: mod.rs  mountpoint.rs
crate/realize-lib/: Cargo.toml  Test-local.toml.sample  build.rs
crate/realize-lib/capnp/: unreal.capnp
crate/realize-lib/capnp/network/rpc/: peer.capnp  read.capnp  realstore.capnp  result.capnp  store.capnp
crate/realize-lib/capnp/network/testing/: hello.capnp
crate/realize-lib/capnp/rpc/: read.capnp  store.capnp
crate/realize-lib/capnp/storage/: real.capnp  unreal.capnp
crate/realize-lib/src/: algo.rs  client.rs  config.rs  errors.rs  fs.rs  lib.rs  logic.rs  metrics.rs  model.rs  network.rs  rpc.rs  server.rs  storage.rs  transport.rs  utils.rs
crate/realize-lib/src/algo/: hash.rs
crate/realize-lib/src/client/: reconnect.rs
crate/realize-lib/src/fs/: downloader.rs  nfs.rs
crate/realize-lib/src/logic/: config.rs  setup.rs
crate/realize-lib/src/logic/consensus/: movedirs.rs
crate/realize-lib/src/model/: arena.rs  byterange.rs  data.rs  path.rs  peer.rs  service.rs  time.rs
crate/realize-lib/src/network/: capnp.rs  config.rs  hostport.rs  metrics.rs  rate_limit.rs  reconnect.rs  rpc.rs  security.rs  tcp.rs  testing.rs
crate/realize-lib/src/network/rpc/: capnp.rs  history.rs  household.rs  realize.rs  realstore.rs
crate/realize-lib/src/network/rpc/history/: client.rs  server.rs
crate/realize-lib/src/network/rpc/realize/: client.rs  metrics.rs  server.rs
crate/realize-lib/src/network/rpc/realstore/: client.rs  metrics.rs  server.rs
crate/realize-lib/src/network/security/: testing.rs
crate/realize-lib/src/network/services/: realize.rs
crate/realize-lib/src/network/services/realize/: metrics.rs  server.rs
crate/realize-lib/src/rpc/: household.rs  realstore.rs  testing.rs
crate/realize-lib/src/rpc/realstore/: client.rs  metrics.rs  server.rs
crate/realize-lib/src/storage/: config.rs  error.rs  real.rs  testing.rs  unreal.rs
crate/realize-lib/src/storage/real/: hasher.rs  history.rs  index.rs  notifier.rs  reader.rs  store.rs  watcher.rs
crate/realize-lib/src/storage/unreal/: async.rs  cache.rs  downloader.rs  error.rs  future.rs  sync.rs  testing.rs  types.rs  updater.rs
crate/realize-lib/src/transport/: rate_limit.rs  security.rs  tcp.rs
crate/realize-lib/src/transport/security/: testing.rs
crate/realize-lib/src/utils/: async_utils.rs  byterange.rs  hash.rs  holder.rs  logging.rs
crate/realize-lib/tests/: metrics_test.rs  nfs_integration_test.rs
crate/realize-lib/tests/common/: config.rs  mountpoint.rs
crate/realize-network/: Cargo.toml  build.rs
crate/realize-network/capnp/testing/: hello.capnp
crate/realize-network/src/: capnp.rs  config.rs  hostport.rs  lib.rs  network.rs  rate_limit.rs  reconnect.rs  security.rs  testing.rs  unixsocket.rs
crate/realize-storage/: Cargo.toml  build.rs
crate/realize-storage/capnp/: engine.capnp  mark.capnp  real.capnp  unreal.capnp
crate/realize-storage/capnp/arena/: blob.capnp  cache.capnp  engine.capnp  history.capnp  index.capnp  mark.capnp
crate/realize-storage/capnp/global/: cache.capnp
crate/realize-storage/src/: arena.rs  config.rs  engine.rs  error.rs  global.rs  lib.rs  mark.rs  real.rs  testing.rs  types.rs  unreal.rs  utils.rs
crate/realize-storage/src/arena/: arena_cache.rs  blob.rs  cache.rs  cleaner.rs  db.rs  dirty.rs  engine.rs  fs.rs  hasher.rs  history.rs  index.rs  indexed_store.rs  jobs.rs  mark.rs  notifier.rs  peer.rs  reader.rs  tree.rs  types.rs  update.rs  watcher.rs
crate/realize-storage/src/arena/blob/: file.rs
crate/realize-storage/src/global/: cache.rs  db.rs  fs.rs  inode_allocator.rs  pathid_allocator.rs  types.rs
crate/realize-storage/src/real/: hasher.rs  index.rs  notifier.rs  reader.rs  store.rs  watcher.rs
crate/realize-storage/src/unreal/: arena_cache.rs  blob.rs  cache.rs  types.rs
crate/realize-storage/src/utils/: debouncer.rs  fs_utils.rs  hash.rs  holder.rs  inhibit.rs  redb_utils.rs
docker/: Dockerfile  entrypoint.sh
internal/: realize.go  realize_test.go
manual_tests/: .out  a.out  a.toml  a.yaml  b.out  b.toml  b.yaml  clean.sh  client.toml  control.sh  down.sh  functions.sh  merge.sh  metrics.sh  mount.sh  (+8 more)
(+93 files in other folders)
