[package]
name = "realize"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
assert_unordered = "0.3"
base64 = "0.22.1"
clap = { version = "4.5", features = ["derive"] }
console = "0.15"
ctrlc = "3.4"
env_logger = "0.11"
fast_rsync = "0.2"
futures = "0.3"
humantime = "2.1"
indicatif = "0.17"
log = "0.4"
pathdiff = "0.2.3"
rustls = "0.23"
serde = {version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
sha2 = "0.10"
tarpc = { version = "0.36", features = ["serde1", "tokio1", "serde-transport", "serde-transport-bincode", "tcp"] }
thiserror = "2.0"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "fs", "io-util"] }
tokio-rustls = "0.26"
tracing = "0.1"
walkdir = "2.5"
rouille = "3.6"
prometheus = { version = "0.14", features = ["process", "push"] }
once_cell = "1.19"
lazy_static = "1.5.0"
# keep sorted

[dev-dependencies]
assert_cmd = "2.0"
assert_fs = "1.1"
futures = "0.3"
predicates = "3.0"
process-wrap = { version = "8.2", features = ["tokio1"] }
tempfile = "3.10"
test-tag = "0.1"
reqwest = { version = "0.11", features = ["json"] }
portpicker = "0.1"
# keep sorted
