[package]
name = "realize-cmd"
version = "0.1.0"
edition = "2024"

[dependencies]
realize-lib = { path = "../realize-lib" }
anyhow = "1.0"
async-speed-limit = { version = "0.4.2", features = ["futures-timer","futures-core"] }
clap = { version = "4.5", features = ["derive"] }
console = "0.15"
ctrlc = "3.4"
env_logger = "0.11"
indicatif = "0.17"
lazy_static = "1.5"
log = "0.4"
prometheus = { version = "0.14", features = ["push"] }
parse-size = "1.1"
rustls = "0.23"
tarpc = { version = "0.36", features = ["serde1", "tokio1", "serde-transport", "serde-transport-bincode", "tcp"] }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "fs", "io-util"] }
humantime = "2.2"

[dev-dependencies]
assert_cmd = "2.0"
assert_fs = "1.1"
assert_unordered = "0.3"
predicates = "3.1"
reqwest = "0.12"
tempfile = "3.20"
test-tag = "0.1"
pathdiff = "0.2"
tokio = { version = "1", features = ["process"] }
hyper = "1.6"
hyper-util = "0.1"