[package]
name = "realize-control"
version = "0.1.0"
edition = "2024"

[dependencies]
realize-core = { path = "../realize-core" }
realize-network = { path = "../realize-network" }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "process", "signal"] }
log = "0.4.27"
capnp = "0.21.4"
capnp-rpc = "0.21.0"

[dev-dependencies]
assert_fs = "1.1"
env_logger = "0.11"
realize-storage = { path = "../realize-storage" }
realize-types = { path = "../realize-types" }
scopeguard = "1.2"
