[package]
name = "realize-control"
version = "0.1.0"
edition = "2024"

[dependencies]
realize-core = { path = "../realize-core" }
realize-storage = { path = "../realize-storage" }
realize-network = { path = "../realize-network" }
realize-types = { path = "../realize-types" }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "process", "signal"] }
log = "0.4.27"
console = "0.16.0"
indicatif = "0.18.0"
tokio-util = "0.7.15"

[dev-dependencies]
assert_fs = "1.1"
env_logger = "0.11"
scopeguard = "1.2"
