[package]
name = "realize-core"
version = "0.1.0"
edition = "2024"

[features]
testing = ["dep:assert_fs"]

[dependencies]
realize-types = { path = "../realize-types" }
realize-network = { path = "../realize-network" }
realize-storage = { path = "../realize-storage" }
anyhow = "1.0"
assert_fs = { version = "1.1", optional = true } # for feature = "testing"
async-speed-limit = { version = "0.4.2", features = ["futures-timer","futures-core"] }
async-trait = "0.1.88"
bincode = "1.3.3"
capnp = "0.21.1"
capnp-rpc = "0.21.0"
env_logger = "0.11"
futures = "0.3"
hyper = { version = "1.6", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio"] }
lazy_static = "1.5"
log = "0.4"
moka = { version = "0.12.10", features = ["future"] }
nfsserve = "0.10.2"
nix = { version = "0.30.1", features = ["user"] }
pathdiff = "0.2"
prometheus = { version = "0.14", features = [] }
rustls = "0.23"
serde = {version = "1.0", features = ["derive"] }
tarpc = { version = "0.36", features = ["serde1", "tokio1", "serde-transport", "serde-transport-bincode", "tcp"] }
thiserror = "2.0"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "fs", "io-util"] }
tokio-retry = "0.3.0"
tokio-rustls = "0.26"
tokio-stream = "0.1.17"
uuid = { version = "1.17.0", features = ["std", "v7"] }
walkdir = "2.5"
fast_rsync = "0.2.0"

[dev-dependencies]
realize-network = { path = "../realize-network", features = ["testing"] }
realize-storage = { path = "../realize-storage", features = ["testing"] }
assert_cmd = "2.0"
assert_fs = "1.1"
assert_unordered = "0.3"
futures = "0.3"
nix = { version = "0.30.1", features = ["fs"] }
portpicker = "0.1"
predicates = "3.1"
redb = { version = "2.6.0", features = ["logging"] }
reqwest = "0.12"
serial_test = "3.2.0"
tempfile = "3.20"
test-tag = "0.1"
tokio = { version = "1", features = ["process"] }
toml = { version = "0.8.23", features = ["display", "parse"] }
rand = "0.9.2"

[build-dependencies]
anyhow = "1.0"
capnpc = "0.21.0"
