[package]
name = "realize-daemon"
version = "0.1.0"
edition = "2024"

[dependencies]
realize-lib = { path = "../realize-lib" }
realize-fs = { path = "../realize-fs" }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
lazy_static = "1.5"
prometheus = { version = "0.14", features = [] }
rustls = "0.23"
serde = {version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "fs", "io-util"] }
log = "0.4"
signal-hook-tokio = { version = "0.3.1", features = ["futures-v0_3"] }
signal-hook = "0.3.18"
futures-util = "0.3.31"
toml = {version="0.8.23", features = ["parse"]}

[dev-dependencies]
assert_cmd = "2.0"
assert_fs = "1.1"
predicates = "3.1"
portpicker = "0.1"
reqwest = "0.12"
tempfile = "3.20"
test-tag = "0.1"
assert_unordered = "0.3"
tarpc = { version = "0.36", features = ["serde1", "tokio1", "serde-transport", "serde-transport-bincode", "tcp"] }
tokio = { version = "1", features = ["process"] }
nix = { version = "0.30.1", features = ["signal"]}
nfs3_client = { version = "0.4.2", features = ["tokio"] }
nfs3_types = "0.3.4"
toml = {version="0.8.23", features = ["display"]}
tokio-retry = "0.3.0"
