[package]
name = "realize-fs"
version = "0.1.0"
edition = "2024"

[dependencies]
realize-lib = { path = "../realize-lib" }
anyhow = "1.0"
env_logger = "0.11"
nfsserve = "0.10.2"
async-trait = "0.1.88"
thiserror = "2.0.12"
nix = {version="0.30.1", features=["user"]}
tokio = {version="1.45.1", features=[]}
log = "0.4.27"

[dev-dependencies]
anyhow = "1.0"
assert_fs = "1.1.3"
env_logger = "0.11"
log = "0.4.27"
nix = { version = "0.30.1", features = ["fs", "mount"] }
serde = "1.0.219"
test-tag = "0.1.4"
toml = {version="0.8.23", features = ["parse"]}
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

