[package]
name = "realize-lib"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
assert_unordered = "0.3"
async-speed-limit = { version = "0.4.2", features = ["futures-timer","futures-core"] }
async-trait = "0.1.88"
base64 = "0.22"
bincode = "1.3.3"
blake2 = "0.10.6"
capnp = "0.21.1"
capnp-rpc = "0.21.0"
env_logger = "0.11"
fast_rsync = "0.2"
futures = "0.3"
hyper = { version = "1.6", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio"] }
lazy_static = "1.5"
log = "0.4"
moka = { version = "0.12.10", features = ["future"] }
nfsserve = "0.10.2"
nix = { version = "0.30.1", features = ["user"] }
pathdiff = "0.2"
prometheus = { version = "0.14", features = [] }
redb = "2.6.0"
rustls = "0.23"
serde = {version = "1.0", features = ["derive"] }
sha2 = "0.10"
tarpc = { version = "0.36", features = ["serde1", "tokio1", "serde-transport", "serde-transport-bincode", "tcp"] }
thiserror = "2.0"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "fs", "io-util"] }
tokio-retry = "0.3.0"
tokio-rustls = "0.26"
tokio-util = { version = "0.7.15", features = ["compat"] }
walkdir = "2.5"


[target.'cfg(target_os="linux")'.dependencies]
inotify = "0.11.0"

[dev-dependencies]
assert_cmd = "2.0"
assert_fs = "1.1"
futures = "0.3"
portpicker = "0.1"
predicates = "3.1"
reqwest = "0.12"
serial_test = "3.2.0"
tempfile = "3.20"
test-tag = "0.1"
tokio = { version = "1", features = ["process"] }
redb = { version = "2.6.0", features = ["logging"] }
nix = { version = "0.30.1", features = ["fs"] }
toml = { version = "0.8.23", features = ["display", "parse"] }

[build-dependencies]
anyhow = "1.0"
capnpc = "0.21.0"
