[package]
name = "realize-network"
version = "0.1.0"
edition = "2024"

[features]
testing = ["dep:portpicker"]

[dependencies]
realize-types = { path = "../realize-types" }
capnp = "0.21.1"
capnp-rpc = "0.21.0"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "fs", "io-util", "time", "sync", "rt"] }
tokio-rustls = "0.26"
tokio-util = { version = "0.7.15", features = ["compat"] }
tokio-retry = "0.3.0"
futures = "0.3"
rustls = "0.23"
tarpc = { version = "0.36", features = ["serde1", "tokio1", "serde-transport", "serde-transport-bincode", "tcp"] }
async-speed-limit = { version = "0.4.2", features = ["futures-timer","futures-core"] }
log = "0.4"
scopeguard = "1.2.0"
lazy_static = "1.5"
prometheus = { version = "0.14", features = [] }
env_logger = "0.11"
portpicker = { version = "0.1", optional = true }

[dev-dependencies]
assert_fs = "1.1.3"
portpicker = { version = "0.1" }

[build-dependencies]
capnpc = "0.21.0"
