[package]
name = "realize-network"
version = "0.1.0"
edition = "2024"

[features]
testing = ["dep:portpicker"]

[dependencies]
realize-types = { path = "../realize-types" }
capnp = "0.21.4"
capnp-rpc = "0.21.0"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "fs", "io-util", "time", "sync", "rt"] }
tokio-rustls = "0.26"
tokio-util = { version = "0.7.16", features = ["compat"] }
tokio-retry = "0.3.0"
futures = "0.3"
rustls = "0.23"
log = "0.4"
scopeguard = "1.2.0"
env_logger = "0.11"
portpicker = { version = "0.1", optional = true }
socket2 = "0.6.0"

[dev-dependencies]
assert_fs = "1.1.3"
portpicker = { version = "0.1" }
toml = "0.8"

[build-dependencies]
capnpc = "0.21.2"
