[package]
name = "realize-storage"
version = "0.1.0"
edition = "2024"

[features]
testing = []

[dependencies]
realize-types = { path = "../realize-types" }
anyhow = "1.0"
assert_fs = { version = "1.1", optional = true } # for feature = "testing"
async-walkdir = "2.1.0"
blake2 = "0.10.6"
capnp = "0.21.1"
env_logger = "0.11"
fast_rsync = "0.2"
futures = "0.3"
log = "0.4"
notify = "8.0.0"
pathdiff = "0.2"
redb = "2.6.0"
serde = {version = "1.0", features = ["derive"] }
thiserror = "2.0"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "fs", "io-util"] }
tokio-stream = "0.1.17"
tokio-util = { version = "0.7.15", features = ["compat", "io"] }
uuid = { version = "1.17.0", features = ["std", "v7"] }
walkdir = "2.5"
bimap = "0.6.3"

[dev-dependencies]
assert_fs = "1.1"
assert_unordered = "0.3"


[build-dependencies]
anyhow = "1.0"
capnpc = "0.21.0"
